Fixed pom relationship issue

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -3,9 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <!-- Your own application should inherit from spring-boot-starter-parent -->
         <groupId>experiment</groupId>
-        <artifactId>experiment</artifactId>
+        <artifactId>spring-boot-jetty-jersey</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
