--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>web-content</module>
         <module>app</module>
     </modules>
 
