--- a/app/pom.xml
+++ b/app/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>app</artifactId>
 
     <properties>
-        <jetty.version>9.4.8.v20171121</jetty.version>
+        <jetty.version>9.4.11.v20180605</jetty.version>
         <jax.rs.version>2.1.1</jax.rs.version>
         <jersey.version>2.27</jersey.version>
         <servlet.api.version>4.0.1</servlet.api.version>
@@ -63,6 +63,16 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-rewrite</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-common</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>javax-websocket-server-impl</artifactId>
             <version>${jetty.version}</version>
         </dependency>
         <dependency>
