--- a/app/pom.xml
+++ b/app/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>javax.activation</artifactId>
             <version>${javax.activation.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
 
 
         <!-- Test Dependencies -->
