--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+spring:
+  output:
+    ansi:
+      enabled: DETECT
+
 # Server address
 server:
   address: "localhost"
@@ -17,4 +22,3 @@ management:
       base-path: "/management"
       exposure:
         include: "*"
-
